syntax = "proto3";

import "uuid.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "authProto";

message StoredToken {
    UUID token_id = 1;
    string user_agent = 2;
    string platform = 3;
    string fingerprint = 4;
    UUID user_id = 5;
    string user_role = 6;
    string user_namespace = 7;
    string user_volume = 8;
    bool rw_access = 9;
    // @inject_tag: binding:"ip"
    string user_ip = 10;
    UUID part_token_id = 11;
    google.protobuf.Timestamp created_at = 12;
    google.protobuf.Duration life_time = 13;
}

message AccessObject {
    string label = 1;
    // @inject_tag: binding:"uuid"
    string id = 2;
    string access = 3;
}

message ResourcesAccess {
    repeated AccessObject namespace = 1;
    repeated AccessObject volume = 2;
}

message StoredTokenForUser {
    UUID token_id = 1;
    string user_agent = 2;
    // @inject_tag: binding:"ip"
    string ip = 3;
    string created_at = 4;
}